[gd_scene load_steps=7 format=3 uid="uid://bebxclus3je58"]

[ext_resource type="Script" uid="uid://8psn2nkma46w" path="res://scripts/UI/Settings/custom_buttons.gd" id="1_5eyoy"]
[ext_resource type="Theme" uid="uid://pvryohfa8txv" path="res://sprites/UI/kenney_ui-pack-adventure/theme.tres" id="1_w70jg"]
[ext_resource type="Script" uid="uid://h6ctlavd3rde" path="res://scripts/UI/Settings/ui_scale_box.gd" id="2_v7q6c"]
[ext_resource type="Texture2D" uid="uid://cg3urx36gein3" path="res://sprites/UI/kenney_ui-pack-adventure/PNG/Default/button_red_close.png" id="3_5i3h8"]
[ext_resource type="Texture2D" uid="uid://cp5m7n2ceysv0" path="res://sprites/UI/kenney_ui-pack-adventure/PNG/Default/button_brown.png" id="4_0thur"]
[ext_resource type="Texture2D" uid="uid://d3eims5pemnr6" path="res://sprites/UI/kenney_ui-pack-adventure/PNG/Default/hexagon_damaged_brown.png" id="6_rvtmj"]

[node name="Button" type="Control"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(93, 85)
layout_mode = 3
anchors_preset = 0
offset_right = 93.0
offset_bottom = 85.0
mouse_filter = 2
theme = ExtResource("1_w70jg")
script = ExtResource("1_5eyoy")
normal = ExtResource("3_5i3h8")
hover = ExtResource("4_0thur")
clicked = ExtResource("4_0thur")
text = "Button"
font_size = 50
icon = ExtResource("6_rvtmj")
icon_alignment = 0
scale_minimum = 0.5
size_to_content = true

[node name="ScaleBox" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 186.0
offset_bottom = 170.0
scale = Vector2(0.5, 0.5)
script = ExtResource("2_v7q6c")
min_size = Vector2(80, 50)
base_scale = Vector2(0.5, 0.5)

[node name="NinePatchRect" type="NinePatchRect" parent="ScaleBox"]
custom_minimum_size = Vector2(170, 100)
layout_mode = 2
texture = ExtResource("3_5i3h8")
region_rect = Rect2(0, 0, 48, 24)
patch_margin_left = 43
patch_margin_top = 19
patch_margin_right = 43
patch_margin_bottom = 19

[node name="Button" type="Button" parent="ScaleBox"]
layout_mode = 2
flat = true

[node name="Margin" type="MarginContainer" parent="ScaleBox"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Content" type="HBoxContainer" parent="ScaleBox/Margin"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="IconLeft" type="TextureRect" parent="ScaleBox/Margin/Content"]
visible = false
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("6_rvtmj")
expand_mode = 1

[node name="Label" type="Label" parent="ScaleBox/Margin/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
text = "Button"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IconRight" type="TextureRect" parent="ScaleBox/Margin/Content"]
visible = false
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("6_rvtmj")
expand_mode = 1
flip_h = true
